# godelt

./: LICENSE  README.md  godelt.cabal  stack.yaml
src/: F.hs  Lib.hs  PCF.hs  T1.hs  T2.hs  TF.hs
src/Godel/: Eval.hs  Recursion.hs  Typecheck.hs
src/Spec/: T.hs
src/T/: Spec.hs  T1.hs  TF.hs
