name:                godelt
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/proger/godelt#readme
license:             BSD3
license-file:        LICENSE
author:              Vlad Ki
maintainer:          proger@hackndev.com
copyright:           Vlad Ki
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     T1
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty-show
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/proger/godelt
