name:                godelt
version:             0.1.0.0
synopsis:            Compilers playground
description:
        Yay!
homepage:            https://github.com/proger/godelt#readme
license:             BSD3
license-file:        LICENSE
author:              Vlad Ki
maintainer:          proger@hackndev.com
copyright:           Vlad Ki
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     T1
                     , PCF
                     , TF
                     , Godel.Eval
                     , Godel.Typecheck
                     , Godel.Recursion
                     , Spec.T
                     , F
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , pretty-show
                     , ansi-wl-pprint
  default-language:    Haskell2010
  -- https://ghc.haskell.org/trac/ghc/ticket/12234
  ghc-options:       -O0

test-suite doctests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             doctests.hs
  build-depends:       godelt
                     , base
                     , doctest
                     , doctest-discover
  -- https://ghc.haskell.org/trac/ghc/ticket/12234
  ghc-options:       -O0

source-repository head
  type:     git
  location: https://github.com/proger/godelt
